--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="text_search">搜索</string>
     <string name="text_find">发现</string>
     <string name="text_mine">我的</string>
+    <string name="text_modern">现言</string>
+    <string name="text_ancient">古言</string>
+    <string name="text_supernatural">灵异</string>
+    <string name="text_monthly">包月</string>
+    <string name="text_free">免费</string>
 </resources>
